Fix minor bug in menu overflow with titles, fix button min-width bug

--- a/projects/ship-ui/styles/components/ship-button.scss
+++ b/projects/ship-ui/styles/components/ship-button.scss
@@ -31,7 +31,6 @@ $shipButtonShadow: false !default;
     vertical-align: middle;
     text-decoration: none;
     height: var(--btn-h);
-    min-width: var(--btn-h);
     box-shadow: var(--btn-bs);
     font: var(--btn-f);
 
