--- a/projects/ship-ui/styles/components/ship-menu.scss
+++ b/projects/ship-ui/styles/components/ship-menu.scss
@@ -91,6 +91,10 @@ $shipMenu: true !default;
         padding: 0;
       }
 
+      .popover-content {
+        overflow: hidden;
+      }
+
       .form-field-wrap {
         sh-form-field {
           z-index: 10;
